<resources>
    <string name="app_name">EMM Helper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- License Error Code. -->
    <string name="err_internal">Internal error</string>
    <string name="err_internal_server">Internal server error</string>
    <string name="err_licence_invalid_license">Invalid license</string>
    <string name="err_invalid_package_name">Invalid package name</string>
    <string name="err_licence_terminated">License terminated</string>
    <string name="err_network_disconnected">Network disconnected</string>
    <string name="err_network_general">Network general error</string>
    <string name="err_unknown">Error unknown</string>
    <string name="err_not_current_date">Not current date</string>
    <string name="err_null_params">NULL params</string>
    <string name="err_user_disagrees_license_agreement">User disagrees EULA</string>
    <string name="err_signature_mismatch">Signature mismatch</string>
    <string name="err_version_code_mismatch">Version code mismatch</string>

    <string name="manifest_viewer_activity">Manifest Viewer</string>
    <string name="activities">Activities</string>
    <string name="receivers">Receivers</string>
    <string name="permissions">Permissions</string>
    <string name="services">Services</string>
    <string name="providers">Providers</string>
    <string name="press_back_button_again_to_exit">Press back button again to exit</string>
    <string name="write_permission_is_required_to_perform_this_action">Write permission is required to perform this action</string>
    <string name="you_are_not_allowed_to_write_in_this_folder">You are not allowed to write in this folder</string>
    <string name="untitled">Untitled</string>
    <string name="set_file_name">Set file name</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Canceled</string>
    <string name="confirm">Confirm</string>
    <string name="you_are_not_allowed_to_view_this_folder">You are not allowed to view this folder</string>
    <string name="unable_to_find_application_to_open_this_type_of_file">Unable to find application to open this type of file</string>
    <string name="do_you_want_to_override_this_file">Do you want to override this file?</string>
    <string name="saving_to">Saving to</string>
    <string name="file">file</string>
    <string name="failed">Failed</string>
    <string name="host_name_is_empty">Host name is empty</string>
    <string name="error_occurred_check_host_name_and_internet_connection">Error occurred. Check host name and internet connection</string>
    <string name="package_query_hint">Package name…</string>
    <string name="properties_query_hint">Property…</string>
    <string name="loading_packages">Loading packages…</string>
    <string name="find_apk_file_to_view_its_manifest">Find APK file to view it\'s manifest</string>
    <string name="internet_permission_is_required_to_perform_this_action">Internet permission is required to perform this action</string>
    <string name="phone_permission_is_required_to_perform_this_action">Phone permission is required to perform this action</string>
    <string name="version_code">Version code</string>
    <string name="version_name">Version name</string>
    <string name="launcher_kiosk_ready">Launcher/Kiosk ready</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="package_name_removed_from_export_list">Package name removed from export list</string>
    <string name="package_name_added_to_export_list">Package name added to export list</string>
    <string name="copied_text">Copied text</string>
    <string name="package_name_copied">Package name copied</string>
    <string name="share_via">Share via</string>
    <string name="extracting_in_background">Extracting in background</string>
    <string name="apk_extracted_to">APK extracted to:\n</string>
    <string name="extraction_failed">Extraction failed</string>
    <string name="manifest_is_empty">Manifest is empty</string>
    <string name="reading_failed">Reading failed</string>
    <string name="search_title">Search title</string>
    <string name="share_list">Share list</string>
    <string name="export_list_to_csv">Export to csv</string>
    <string name="export_to_csv">Export to csv</string>
    <string name="application_list">Application list</string>
    <string name="view_as_xml">View as xml</string>
    <string name="export_to_txt">Export to txt</string>
    <string name="view_manifest">View manifest from apk</string>
    <string name="file_explorer">File explorer</string>
    <string name="hostname_ips">Hostname IPs</string>
    <string name="put_host_name_here">Hostname</string>
    <string name="list_ip_addresses">List IP addresses</string>
    <string name="ip_addresses">IP addresses:</string>
    <string name="decoding_manifest_file">Decoding manifest file</string>
    <string name="share_manifest">Share manifest</string>
    <string name="manifest_file_is_empty">Manifest file is empty</string>
    <string name="share_ips">Share IPs</string>
    <string name="xml_manifest_viewer">XML Manifest Viewer</string>
    <string name="loading">Loading…</string>
    <string name="elm_license_here">ELM license</string>
    <string name="receiver_was_unregistered">Receiver was already unregistered</string>
    <string name="clear">Clear</string>
    <string name="checking_license">Checking license</string>
    <string name="null_action">null action</string>
    <string name="unknown_extension">Unknown extension</string>
    <string name="path_copied_to_clipboard">Path copied to clipboard</string>
    <string name="check_elm_key">Check ELM key</string>
    <string name="application_installed_refreshing_list">Application installed. Refreshing list</string>
    <string name="application_uninstalled_refreshing_list">Application uninstalled. Refreshing list</string>
    <string name="select_all_visible">Select all visible</string>
    <string name="clear_selection">Clear selection</string>
    <string name="secret_codes">Secret codes</string>
    <string name="nothing_to_share">There is nothing to share</string>
    <string name="nothing_to_export">There is nothing to export</string>
    <string name="export_ips_to_csv">Export IPs to csv</string>
    <string name="export_sim_info_to_csv">Export SIM info to csv</string>
    <string name="share_sim_info">Share SIM info</string>
    <string name="sim_information">SIM information</string>
    <string name="get_device_properties">Get device properties</string>
    <string name="share_properties">Share properties</string>
    <string name="enable_auto_run">Enable auto run</string>
    <string name="accessibility_service_description">Accessibility service run automatically chosen secret code</string>
    <string name="don_t_show_again">Don\'t show again</string>
    <string name="enable_accessibility_service">Enable Accessibility Service</string>
    <string name="enable_accessibility_service_confirmation">Do you want to enable Accessibility Service to run secret codes automatically?</string>
    <string name="later">Later</string>
    <string name="you_can_enable_it_from_menu">You can enable it from menu</string>
    <string name="enable">Enable</string>
    <string name="warning">Warning</string>
    <string name="secret_codes_warning_message">Some codes may work only on specific devices.</string>
    <string name="accessibility_service_already_enabled">Accessibility Service has been already enabled</string>
    <string name="secret_code_copied_to_clipboard">Secret code copied to clipboard. Paste it in dialer application</string>


    <string-array name="package_menu">
        <item>View information</item>
        <item>View manifest</item>
        <item>Copy package name</item>
        <item>Share package name</item>
        <item>Extract apk file</item>
    </string-array>

    <string-array name="sim_states">
        <item>Unknown</item>
        <item>Absent</item>
        <item>PIN required</item>
        <item>PUK required</item>
        <item>Network locked</item>
        <item>Ready</item>
        <item>Not Ready</item>
        <item>Permanently disabled</item>
        <item>IO error</item>
        <item>Restricted</item>
    </string-array>

    <string-array name="export">
        <item>Selection</item>
        <item>All text</item>
    </string-array>

    <string-array name="secretCodesNames">
        <item>Device IMEI</item>
        <item>Firmware inf.</item>
        <item>System Dump Mode</item>
        <item>General Test Mode</item>
        <item>Battery Status</item>
        <item>Service Mode</item>
        <item>Camera Firmware</item>
        <item>Firmware version</item>
        <item>Quick Test Mode</item>
        <item>Firmware + Hardware inf.</item>
        <item>Cell inf.</item>
        <item>USB settings</item>
        <item>Network Lock</item>
        <item>FTA SW version</item>
        <item>FTA HW version</item>
        <item>Camera Firmware Standard</item>
        <item>Loopback Test</item>
        <item>Reset Total Call Time</item>
        <item>CP Debug level</item>
        <item>Grip Sensor</item>
        <item>Cabc Test</item>
    </string-array>

    <string-array name="secretCodes">
        <item>*#06#</item>
        <item>*#1234#</item>
        <item>*#9900#</item>
        <item>*#0*#</item>
        <item>*#0228#</item>
        <item>*#9090#</item>
        <item>*#34971539#</item>
        <item>*#2663#</item>
        <item>*#7353#</item>
        <item>*#12580*369#</item>
        <item>*#0011#</item>
        <item>*#0808#</item>
        <item>#7465625*638*#</item>
        <item>*#1111#</item>
        <item>*#2222#</item>
        <item>*#7412365*</item>
        <item>*#0283#</item>
        <item>*#22558463#</item>
        <item>*#66336#</item>
        <item>*#1106#</item>
        <item>*#22228378#</item>
    </string-array>
</resources>
