<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_app_list"
            android:title="@string/application_list" />
        <item
            android:id="@+id/nav_manifest_viewer"
            android:title="@string/view_manifest" />
        <item
            android:id="@+id/nav_root_explorer"
            android:title="@string/file_explorer" />
        <item
            android:id="@+id/nav_ip_for_hostname"
            android:title="@string/hostname_ips" />
        <item
            android:id="@+id/nav_license_checker"
            android:title="@string/check_elm_key" />
        <item
            android:id="@+id/nav_show_sim_info"
            android:title="@string/sim_information" />
        <item
            android:id="@+id/nav_secret_codes"
            android:title="@string/secret_codes" />
        <item
            android:id="@+id/nav_get_prop"
            android:title="@string/get_device_properties" />
    </group>
</menu>
