<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search_white"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/action_export_to_csv"
        android:orderInCategory="200"
        android:title="@string/export_list_to_csv"
        app:showAsAction="never" />
    <item android:id="@+id/action_share_list"
        android:orderInCategory="250"
        android:title="@string/share_list"
        app:showAsAction="never" />
    <item android:id="@+id/action_clear_export_list"
        android:orderInCategory="300"
        android:title="@string/clear_export_list"
        app:showAsAction="never" />
</menu>