<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.kaszubski.kamil.emmhelper.IPFinderFragment"
        android:orientation="vertical"
        android:padding="8dp">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:indeterminate="true"
            android:visibility="invisible"
            android:layout_marginTop="-4dp"
            android:layout_marginBottom="-8dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:hint="@string/put_host_name_here" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_ip_addresses"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ip_addresses"
            android:id="@+id/textView11"
            android:paddingTop="10dp"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView10"
            android:textIsSelectable="true"
            android:paddingLeft="10dp" />

    </LinearLayout>
</ScrollView>